removed title padding at 400px to prevent overflow and filter items down to 1 column

--- a/public/css/wp-job-board-public.css
+++ b/public/css/wp-job-board-public.css
@@ -139,6 +139,14 @@ body {
     font-size: .8rem;
 }
 
+@media screen and (max-width: 400px) {
+
+    #wpjb .wpjb-card__hd {
+        padding-right: 0px;
+        /* prevents card from overflowing */
+    }
+}
+
 /*----------------------------------------------------------------------------------
     Facets
 ----------------------------------------------------------------------------------*/
@@ -271,6 +279,14 @@ body {
     }
 }
 
+@media screen and (max-width: 400px) {
+
+    #wpjb .wpjb-facet__section__list {
+        columns: auto 1;
+        column-gap: 10px;
+    }
+
+}
 /*----------------------------------------------------------------------------------
     Search Input
 ----------------------------------------------------------------------------------*/
